Attempting first version of module registration